# imu.rs

./: .dockerignore  .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
common/: Cargo.toml  build.rs
common/proto/: imu.proto
common/src/: cli_defaults.rs  lib.rs  logging.rs  proto.rs
consumer/: Cargo.toml  README.md
consumer/src/: cli.rs  consumer.rs  main.rs  motion.rs
docker/: Dockerfile  docker-compose.yaml  run.sh  setup-env.sh  stop.sh
publisher/: Cargo.toml  README.md
publisher/src/: cli.rs  imu_emulator.rs  main.rs  publisher.rs
