[package]
name = "common"
version = "0.1.0"
edition = "2024"
authors = ["Norbert Hańderek <norbert.handerek03@gmail.com>"]
build = "build.rs"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
slog = "2.7.0"
slog-async = "2.8.0"
slog-term = "2.9.1"
prost = "0.13.5"

[build-dependencies]
prost-build = "0.13.5"